
  [ Branden Robinson ]
  * Patch xprop to stop segfaulting when deleted atoms are requested.
    Committed upstream as git 47514347db811d002e7f3ca05d390565bc3ee5e5.
    (Closes: #197526)

  [ Denis Barbier ]
  * Acknowledge NMU, thanks dann frazier. (closes: #363198)
  * The rsh program is required to build xsm.  Replace Build-Depends: ssh | rsh
    by Build-Depends: openssh-client | ssh

 -- Denis Barbier <barbier@debian.org>  Mon,  7 Aug 2006 21:30:25 +0200

xbase-clients (1:7.1.ds-2.1) unstable; urgency=low

  * Non-maintainer upload.
  * Fix implicit pointer conversion in xconsole.c (closes: #363198)
    (Was fixed in 1:7.1.ds-1.1 NMU, but silently dropped in 1:7.1.ds-2 MU)

 -- dann frazier <dannf@debian.org>  Sat, 29 Jul 2006 13:59:40 -0600

xbase-clients (1:7.1.ds-2) unstable; urgency=high

  * Security update. Fix for setuid privledge escalation vulernabilities in
    xinit, xf86dga, and xload. See
    http://lists.freedesktop.org/archives/xorg/2006-June/016146.html for the
    full advisory. This package applies the patches for the 7.0 release of
    those apps.

 -- David Nusinow <dnusinow@debian.org>  Fri, 30 Jun 2006 01:10:17 -0400

xbase-clients (1:7.1.ds-1) unstable; urgency=low

  [ Steve Langasek ]
  * Drop broken build-dependency on xprint-utils, no thanks to anonymous
    someone.
  * Pass --disable-xprint to invocations of configure instead, which is
    the real fix for the symptoms described:  we want the xbase-clients
    package to consistently build *without* xprint support, instead of
    autodetecting (and possibly failing) based on whether libxp-dev is
    installed.  Properly closes: #366275.
  * Also call PKG_PROG_PKG_CONFIG explicitly from xdbebizzy's
    configure.ac, since otherwise --disable-xprint leaves us without
    PKG_CONFIG defined.

  [ David Nusinow ]
  * This update should include all the apps released with X11R7.1. Version the
    package to match this.
  * Update bitmap to 1.0.2
  * Update xcursorgen to 1.0.1