@@ -15,9 +15,8 @@ include debian/xsfbs/xsfbs.mk
 # This package contains multiple modules as shipped by upstream. Each module is # contained in a subdirectory in the root dir of the package. You must list each
 # subdirectory explicitly so that the build system knows what to build
 DEF_SUBDIRS=appres-X11R7.0-1.0.0 beforelight-X11R7.0-1.0.1 bitmap editres-X11R7.0-1.0.1 fstobdf iceauth-X11R7.0-1.0.1 ico-X11R7.0-1.0.1 listres-X11R7.0-1.0.1 oclock-X11R7.0-1.0.1 smproxy viewres-X11R7.0-1.0.1 x11perf-1.4.1 xauth-X11R7.0-1.0.1 xbiff-X11R7.0-1.0.1 xcalc-X11R7.0-1.0.1 xclipboard-X11R7.0-1.0.1 xclock xcmsdb-X11R7.0-1.0.1 xconsole xcursorgen xdbedizzy-X11R7.0-1.0.1 xditview-X11R7.0-1.0.1 xdpyinfo-X11R7.0-1.0.1 xdriinfo xedit-X11R7.0-1.0.1 xev-X11R7.0-1.0.1 xeyes-X11R7.0-1.0.1 xf86dga-X11R7.0-1.0.1 xfd-X11R7.0-1.0.1 xfontsel-X11R7.0-1.0.1 xgamma-X11R7.0-1.0.1 xgc-X11R7.0-1.0.1 xhost xinit xkill-X11R7.0-1.0.1 xload-X11R7.0-1.0.1 xlogo-X11R7.0-1.0.1 xlsatoms-X11R7.0-1.0.1 xlsclients-X11R7.0-1.0.1 xlsfonts-X11R7.0-1.0.1 xmag-X11R7.0-1.0.1 xman xmessage-X11R7.0-1.0.1 xmodmap xmore-X11R7.0-1.0.1 xprop-X11R7.0-1.0.1 xrandr xrdb xrefresh xsetmode-X11R7.0-1.0.0 xsetpointer-X11R7.0-1.0.0 xsetroot-X11R7.0-1.0.1 xset xsm-X11R7.0-1.0.1 xstdcmap-X11R7.0-1.0.1 xtrap-X11R7.0-1.0.1 xvidtune-X11R7.0-1.0.1 xvinfo-X11R7.0-1.0.1 xwd-X11R7.0-1.0.1 xwininfo xwud-X11R7.0-1.0.1
-XKB_SUBDIRS1=setxkbmap-1.0.2
-XKB_SUBDIRS2=xkbcomp xkbevd xkbprint-X11R7.0-1.0.1 xkbutils-X11R7.0-1.0.1
-SUBDIRS=$(DEF_SUBDIRS) $(XKB_SUBDIRS1) $(XKB_SUBDIRS2)
+XKB_SUBDIRS=setxkbmap-1.0.2 xkbcomp xkbevd xkbprint-X11R7.0-1.0.1 xkbutils-X11R7.0-1.0.1
+SUBDIRS=$(DEF_SUBDIRS) $(XKB_SUBDIRS)
 
 CFLAGS = -Wall -g
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
@@ -53,24 +52,12 @@ build-stamp:
 		$(MAKE)) || exit 1; \
 	done
 
-	for FILE in $(XKB_SUBDIRS1); do \
+	for FILE in $(XKB_SUBDIRS); do \
 		echo "$$FILE" ; \
 		mkdir "$$FILE"-obj-$(DEB_BUILD_GNU_TYPE); \
 		(cd "$$FILE"-obj-$(DEB_BUILD_GNU_TYPE) && \
 		../"$$FILE"/configure --prefix=/usr --mandir=\$${prefix}/share/man \
 		             --infodir=\$${prefix}/share/info $(confflags) \
-			     --with-xkb-config-root=/usr/share/X11/xkb \
-		             CFLAGS="$(CFLAGS)" && \
-		$(MAKE)) || exit 1; \
-	done
-
-	for FILE in $(XKB_SUBDIRS2); do \
-		echo "$$FILE" ; \
-		mkdir "$$FILE"-obj-$(DEB_BUILD_GNU_TYPE); \
-		(cd "$$FILE"-obj-$(DEB_BUILD_GNU_TYPE) && \
-		../"$$FILE"/configure --prefix=/usr --mandir=\$${prefix}/share/man \
-		             --infodir=\$${prefix}/share/info $(confflags) \
-			     --datadir=/etc \
 		             CFLAGS="$(CFLAGS)" && \
 		$(MAKE)) || exit 1; \
 	done
