@@ -9,6 +9,10 @@ xbase-clients (1:7.1.ds-3) UNRELEASED; urgency=low
   * Acknowledge NMU, thanks dann frazier. (closes: #363198)
   * The rsh program is required to build xsm.  Replace Build-Depends: ssh | rsh
     by Build-Depends: openssh-client | ssh
+  * Fix debian/rules so that xkbcomp look for XKB files in /usr/share/X11/xkb.
+    Thanks Steinar H. Gunderson  (closes: #381884)
+    All XKB related programs share now the same build system, so factor
+    commands in debian/rules.
 
  -- Denis Barbier <barbier@debian.org>  Mon,  7 Aug 2006 21:30:25 +0200
 
